# ml-engineer-zoomcamp

./: .gitignore  hello.py  pyproject.toml
01-intro/: homework.md  main.py
01-intro/notebooks/: exploratory_analysis.ipynb
02-regression/: hello.py  homework.md  pyproject.toml
02-regression/notebooks/: homework.ipynb  notebook.ipynb
03-classification/: homework.md
03-classification/notebooks/: churn-prediction.ipynb  homework.ipynb
04-eval-classification/: homework.md
04-eval-classification/notebooks/: homework.ipynb  notebook.ipynb
05-deployment/: Dockerfile  homework.md  predict-test.py  predict.py  requirements.txt
05-deployment/homework/: Pipfile  dockerfile  homework-test.py  homework.ipynb  homework.py
05-deployment/notebooks/: 05-predict-test.ipynb  notebook.ipynb
06-trees/: homework.md
06-trees/notebooks/: homework.ipynb  notebook.ipynb
08-deep-learning/: .gitignore  homework.ipynb  homework.md  notebook.ipynb
09-serverless/: Dockerfile  homework-dockerfile  homework-test.py  homework.md  homework.py  lambda_function.py  run_prediction.py  test.py
09-serverless/notebooks/: homework.ipynb  notebook.ipynb
10-kubernetes/: deployment.yaml  docker.scripts.txt  gateway.py  homework.md  requirements.txt  save-model.py
10-kubernetes/clothing-model/: saved_model.pb
10-kubernetes/notebooks/: tensorflow-serving-connect.ipynb
midterm-project/: Dockerfile  app.py  pyproject.toml  readme.md  render.yaml  requirements.txt  train.py
midterm-project/notebooks/: notebook.ipynb
midterm-project/static/: script.js  styles.css
