[project]
name = "02-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=2.14.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "python-lambda>=11.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
]
